Try to fix the width on tablets and phones

--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,18 @@ i {
   content: "\e62f";
 }
 
+#content {
+  width: 1080px;
+  margin: auto;
+  position: relative;
+}
+
+@media screen and (min-width: 1080px) {
+  #content {
+    width: 100%;
+  }
+}
+
 .section {
   position: relative;
   width: 100%;
